--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/emidverification?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=toluJ4b
+#spring.datasource.username=root
+#spring.datasource.password=toluJ4b
 
 spring.datasource.url=jdbc:mysql://localhost:3306/emidverification?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=lekan
-#spring.datasource.password=tolulopeJ4b#
+spring.datasource.username=lekan
+spring.datasource.password=tolulopeJ4b#
 
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
