--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ dhis-password=Lekus2#@
 #SSL
 
 #live
-dhis-url=https://staging.nphcdaict.com.ng
+dhis-url=https://nphcdaict.com.ng
 dhis-username=DQ.Access
 kobo-url=https://kc.kobotoolbox.org/api/v1/data/799834
 kobo-username=nphcdaemid
