--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ dhis-password=Lekus2#@
 
 #live
 dhis-url=https://nphcdaict.com.ng
+dhis-url-update=https://nphcdaict.com.ng
 dhis-username=DQ.Access
 kobo-url=https://kc.kobotoolbox.org/api/v1/data/799834
 kobo-username=nphcdaemid
