--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ dhis-url-update=https://nphcdaict.com.ng
 dhis-username=DQ.Access
 kobo-url=https://kc.kobotoolbox.org/api/v1/data/799834
 kobo-username=nphcdaemid
-kobo-password=nphcda123#
+kobo-password=validatornphcda#123
 #dhis-password=P@$$w9rd2
 
 #dhis-username=DQ.Access
